--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-19.08.51
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.11-19.18.36
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -4727,10 +4727,33 @@ BP_HealthRegenerationPowerup_C.RotatingComponent=True
 BP_HealthRegenerationPowerup_C.PlanarMovement=True
 BP_HealthRegenerationPowerup_C.MovementComponent=True
 BP_HealthRegenerationPowerup_C.Activation=True
+REINST_BP_Shotgun_C_57.Tick=True
+REINST_BP_Shotgun_C_57.Weapon=True
+REINST_BP_Shotgun_C_57.Rendering=True
+REINST_BP_Shotgun_C_57.Replication=True
+REINST_BP_Shotgun_C_57.Input=True
+REINST_BP_Shotgun_C_57.Actor=True
+REINST_BP_GrenadeLaucnher_C_27.Tick=True
+REINST_BP_GrenadeLaucnher_C_27.Projectile=True
+REINST_BP_GrenadeLaucnher_C_27.Weapon=True
+REINST_BP_GrenadeLaucnher_C_27.Rendering=True
+REINST_BP_GrenadeLaucnher_C_27.Replication=True
+REINST_BP_GrenadeLaucnher_C_27.Input=True
+REINST_BP_GrenadeLaucnher_C_27.Actor=True
+REINST_BP_MachineGun_C_61.Tick=True
+REINST_BP_MachineGun_C_61.Weapon=True
+REINST_BP_MachineGun_C_61.Rendering=True
+REINST_BP_MachineGun_C_61.Replication=True
+REINST_BP_MachineGun_C_61.Input=True
+REINST_BP_MachineGun_C_61.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue.grenade_launcher_reload_Cue
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
+OpenAssetsAtExit=/Game/Objects/Weapons/BP_MachineGun.BP_MachineGun
+OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue.Machine_Gun_reload_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4763,7 +4786,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Core
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Weapons/Sounds
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5122,26 +5145,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem1=/Game/Objects/Weapons/BP_Shotgun
-MRUItem2=/Game/Blueprints/Characters/BP_AIPlayer
-MRUItem3=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem4=/Game/AdvancedAI/BP_AIPlayer
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem6=/Game/TrackerBot/BP_TrackerBot
-MRUItem7=/Game/Sounds/Jog-loop
-MRUItem8=/Game/TrackerBot/Sounds/ball_roll_04_loop
-MRUItem9=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem10=/Game/Sounds/Jog-loop_Cue
-MRUItem11=/Game/Weapons/SK_Rifle
-MRUItem12=/Game/Materials/M_RifleBody
-MRUItem13=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem14=/Game/Materials/M_ShotgunBody
-MRUItem15=/Game/Materials/M_Shotgun
-MRUItem16=/Game/Weapons/SK_Shotgun
-MRUItem17=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem18=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem19=/Game/Sounds/Grenade_Launcher_shot_Cue
+MRUItem0=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
+MRUItem1=/Game/Objects/Weapons/BP_MachineGun
+MRUItem2=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem3=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
+MRUItem4=/Game/Objects/Weapons/BP_Rifle
+MRUItem5=/Game/Objects/Weapons/BP_Shotgun
+MRUItem6=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem7=/Game/Blueprints/Characters/BP_AIPlayer
+MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem9=/Game/AdvancedAI/BP_AIPlayer
+MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem11=/Game/TrackerBot/BP_TrackerBot
+MRUItem12=/Game/Sounds/Jog-loop
+MRUItem13=/Game/TrackerBot/Sounds/ball_roll_04_loop
+MRUItem14=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem15=/Game/Sounds/Jog-loop_Cue
+MRUItem16=/Game/Weapons/SK_Rifle
+MRUItem17=/Game/Materials/M_RifleBody
+MRUItem18=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem19=/Game/Materials/M_ShotgunBody
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5244,6 +5267,7 @@ MRUItem19=/Game/Sounds/Grenade_Launcher_shot_Cue
 /Game/Blueprints/Characters/BP_AIPlayer.BP_AIPlayer=0
 /Game/Objects/Weapons/BP_Shotgun.BP_Shotgun=0
 /Game/Objects/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup=0
+/Game/Objects/Weapons/BP_Rifle.BP_Rifle=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
