--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-19.18.36
+CoopGame.TimeStamp=2020.05.11-20.06.14
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4746,14 +4746,18 @@ REINST_BP_MachineGun_C_61.Rendering=True
 REINST_BP_MachineGun_C_61.Replication=True
 REINST_BP_MachineGun_C_61.Input=True
 REINST_BP_MachineGun_C_61.Actor=True
+K2Node_VariableGet.AttenuationDistance=True
+K2Node_VariableGet.AttenuationSpatialization=True
+K2Node_VariableGet.AttenuationAirAbsorption=True
+K2Node_VariableGet.AttenuationListenerFocus=True
+K2Node_VariableGet.AttenuationOcclusion=True
 
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Objects/Characters/BP_PlayerPawn.BP_PlayerPawn
+OpenAssetsAtExit=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer
 OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue.grenade_launcher_reload_Cue
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_GrenadeLaucnher.BP_GrenadeLaucnher
-OpenAssetsAtExit=/Game/Objects/Weapons/BP_MachineGun.BP_MachineGun
-OpenAssetsAtExit=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue.Machine_Gun_reload_Cue
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4786,7 +4790,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Weapons/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Miscellaneous/ExplosiveBarrel
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4904,7 +4908,7 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
-BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
@@ -4947,7 +4951,7 @@ Decorator_RemainingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPa
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
-BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_PlayerPawn_C=
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5145,26 +5149,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
-MRUItem1=/Game/Objects/Weapons/BP_MachineGun
-MRUItem2=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem3=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
-MRUItem4=/Game/Objects/Weapons/BP_Rifle
-MRUItem5=/Game/Objects/Weapons/BP_Shotgun
-MRUItem6=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem7=/Game/Blueprints/Characters/BP_AIPlayer
-MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem9=/Game/AdvancedAI/BP_AIPlayer
-MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem11=/Game/TrackerBot/BP_TrackerBot
-MRUItem12=/Game/Sounds/Jog-loop
-MRUItem13=/Game/TrackerBot/Sounds/ball_roll_04_loop
-MRUItem14=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem15=/Game/Sounds/Jog-loop_Cue
-MRUItem16=/Game/Weapons/SK_Rifle
-MRUItem17=/Game/Materials/M_RifleBody
-MRUItem18=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem19=/Game/Materials/M_ShotgunBody
+MRUItem0=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem1=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
+MRUItem2=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
+MRUItem3=/Game/Objects/Characters/Sounds/Jog-loop_Cue
+MRUItem4=/Game/Objects/Characters/BP_AIPlayer
+MRUItem5=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem6=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem7=/Game/Objects/Weapons/BP_MachineGun
+MRUItem8=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem9=/Game/Objects/Weapons/BP_Rifle
+MRUItem10=/Game/Objects/Weapons/BP_Shotgun
+MRUItem11=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
+MRUItem12=/Game/Blueprints/Characters/BP_AIPlayer
+MRUItem13=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem14=/Game/AdvancedAI/BP_AIPlayer
+MRUItem15=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem16=/Game/TrackerBot/BP_TrackerBot
+MRUItem17=/Game/Sounds/Jog-loop
+MRUItem18=/Game/TrackerBot/Sounds/ball_roll_04_loop
+MRUItem19=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5268,6 +5272,10 @@ MRUItem19=/Game/Materials/M_ShotgunBody
 /Game/Objects/Weapons/BP_Shotgun.BP_Shotgun=0
 /Game/Objects/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup=0
 /Game/Objects/Weapons/BP_Rifle.BP_Rifle=0
+/Game/Objects/TrackerBot/BP_TrackerBot.BP_TrackerBot=0
+/Game/Objects/Characters/Sounds/Jog-loop_Cue.Jog-loop_Cue=0
+/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue.Machine_Gun_reload_Cue=0
+/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
