--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-20.06.14
+CoopGame.TimeStamp=2020.05.11-20.24.14
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4751,9 +4751,17 @@ K2Node_VariableGet.AttenuationSpatialization=True
 K2Node_VariableGet.AttenuationAirAbsorption=True
 K2Node_VariableGet.AttenuationListenerFocus=True
 K2Node_VariableGet.AttenuationOcclusion=True
+BP_ExplosiveBarrel_C.Destruction=True
+REINST_BP_ExplosiveBarrel_C_27.Tick=True
+REINST_BP_ExplosiveBarrel_C_27.Barrel=True
+REINST_BP_ExplosiveBarrel_C_27.Destruction=True
+REINST_BP_ExplosiveBarrel_C_27.Rendering=True
+REINST_BP_ExplosiveBarrel_C_27.Replication=True
+REINST_BP_ExplosiveBarrel_C_27.Input=True
+REINST_BP_ExplosiveBarrel_C_27.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel.BP_ExplosiveBarrel
 
