--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.11-20.42.51
+CoopGame.TimeStamp=2020.05.11-20.55.28
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4837,7 +4837,7 @@ REINST_BP_MachineGun_AI_C_27.Input=True
 REINST_BP_MachineGun_AI_C_27.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Objects/Characters/AIPlayer/Task_AttackTarget.Task_AttackTarget
 
@@ -5032,7 +5032,7 @@ Decorator_RemainingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPa
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.AI.AI|BehaviorTree\" "
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -5232,8 +5232,8 @@ RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorF
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
-MRUItem1=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
-MRUItem2=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem1=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem2=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
 MRUItem3=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
 MRUItem4=/Game/Objects/Weapons/BP_Shotgun
 MRUItem5=/Game/Objects/Weapons/BP_Rifle
