--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4835,11 +4835,13 @@ REINST_BP_MachineGun_AI_C_27.Cooking=True
 REINST_BP_MachineGun_AI_C_27.Replication=True
 REINST_BP_MachineGun_AI_C_27.Input=True
 REINST_BP_MachineGun_AI_C_27.Actor=True
+EditorKeyboardShortcutSettings.AnimNotifyPanel=True
+EditorKeyboardShortcutSettings.AnimationEditor=True
+EditorKeyboardShortcutSettings.AnimSequenceEditor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Characters/AIPlayer/Task_AttackTarget.Task_AttackTarget
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4872,7 +4874,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters/AIPlayer
+ContentBrowserTab1.SelectedPaths=/Game/Objects/Characters/Animations
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5032,7 +5034,7 @@ Decorator_RemainingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPa
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object="\"Object.AI.AI|BehaviorTree\" "
+Object=
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -5046,7 +5048,7 @@ REINST_BP_PlayerPawn_C_30="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_25="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_29="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -5178,7 +5180,7 @@ REINST_BP_AIPlayer_C_133="\"Object.Components.camera.Object.PostProcess.PostProc
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 EnvQueryTest_Trace="\"Object.Trace.TraceData\" "
@@ -5231,26 +5233,26 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
-MRUItem1=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem2=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
-MRUItem3=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem4=/Game/Objects/Weapons/BP_Shotgun
-MRUItem5=/Game/Objects/Weapons/BP_Rifle
-MRUItem6=/Game/Objects/Weapons/BP_MachineGun
-MRUItem7=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem8=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
-MRUItem9=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem10=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
-MRUItem11=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
-MRUItem12=/Game/Objects/Characters/Sounds/Jog-loop_Cue
-MRUItem13=/Game/Objects/Characters/BP_AIPlayer
-MRUItem14=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem15=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem16=/Game/Objects/Powerups/BP_HealthRegenerationPowerup
-MRUItem17=/Game/Blueprints/Characters/BP_AIPlayer
-MRUItem18=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem19=/Game/AdvancedAI/BP_AIPlayer
+MRUItem0=/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem1=/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip
+MRUItem2=/Game/Objects/Characters/Animations/AnimStarterPack/Fire_Shotgun_Hip
+MRUItem3=/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1
+MRUItem4=/Game/Objects/Characters/Animations/BP_CharacterAnimation
+MRUItem5=/Game/Objects/Characters/AIPlayer/Task_AttackTarget
+MRUItem6=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem7=/Game/Objects/Characters/AIPlayer/Service_SelectATargetActor
+MRUItem8=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem9=/Game/Objects/Weapons/BP_Shotgun
+MRUItem10=/Game/Objects/Weapons/BP_Rifle
+MRUItem11=/Game/Objects/Weapons/BP_MachineGun
+MRUItem12=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem13=/Game/Objects/Weapons/Sounds/magazine_empty_Cue
+MRUItem14=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem15=/Game/Objects/Weapons/Sounds/grenade_launcher_reload_Cue
+MRUItem16=/Game/Objects/Weapons/Sounds/Machine_Gun_reload_Cue
+MRUItem17=/Game/Objects/Characters/Sounds/Jog-loop_Cue
+MRUItem18=/Game/Objects/Characters/BP_AIPlayer
+MRUItem19=/Game/Objects/TrackerBot/BP_TrackerBot
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5362,6 +5364,10 @@ MRUItem19=/Game/AdvancedAI/BP_AIPlayer
 /Game/Objects/Characters/AIPlayer/BB_AIPlayer.BB_AIPlayer=0
 /Game/Objects/Characters/AIPlayer/BP_MachineGun_AI.BP_MachineGun_AI=0
 /Game/Objects/Characters/AIPlayer/Service_SelectATargetActor.Service_SelectATargetActor=0
+/Game/Objects/Characters/Animations/AnimStarterPack/Hit_React_1.Hit_React_1=0
+/Game/Objects/Characters/Animations/AnimStarterPack/Reload_Rifle_Hip.Reload_Rifle_Hip=0
+/Game/Objects/Characters/Animations/BP_CharacterAnimation.BP_CharacterAnimation=0
+/Game/Objects/Characters/Animations/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint.UE4ASP_HeroTPP_AnimBlueprint=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
